--- a/pages/support.mdx
+++ b/pages/support.mdx
@@ -1,6 +1,6 @@
 # Support
 
-We've invested significant time and effort into building and maintaining **Musync!** Your support is inspiring to us.
+We've invested significant time and effort into building and maintaining **Musync!**. Your support is inspiring to us.
 
 - [Cast your vote on Top.gg](https://top.gg/bot/1182507989576458352/vote)
 - [Leave a review on Top.gg](https://top.gg/bot/1182507989576458352#reviews)
