--- a/pages/support.mdx
+++ b/pages/support.mdx
@@ -5,4 +5,4 @@ We've invested significant time and effort into building and maintaining **Musyn
 - [Cast your vote on Top.gg](https://top.gg/bot/1182507989576458352/vote)
 - [Leave a review on Top.gg](https://top.gg/bot/1182507989576458352#reviews)
 - [Donate on Ko-Fi](https://ko-fi.com/sinnedpenguin)
-- [Join our support server](https://discord.com/invite/yQxpgFdC6n)
+- [Join our Support Server](https://discord.com/invite/yQxpgFdC6n)
