--- a/pages/commands.mdx
+++ b/pages/commands.mdx
@@ -1,8 +1,11 @@
 # Commands
 
+- **/filter** - Toggle filter. Ex. **/filter bassboost**. <span style={{ color: '#F04747' }}>(new)</span> 
+- **/filter-reset** - Reset filter. <span style={{ color: '#F04747' }}>(new)</span> 
 - **/help** - Display available commands and bot info.
 - **/join** - Join the voice channel.
 - **/leave** - Leave the voice channel.
+- **/lyrics** - Get the lyrics of a song. <span style={{ color: '#F04747' }}>(new)</span> 
 - **/move** - Move a song from the queue.
 - **/nowplaying** - Display the currently playing song.
 - **/pause** - Pause the currently playing song.
