--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,3 +21,7 @@
 ![Play](https://i.ibb.co/SvzGVCr/Screenshot-2023-12-14-083010.png)
 
 ![Skip](https://i.ibb.co/s21Lxz0/Screenshot-2023-12-14-083151.png)
+
+![Filter](https://i.ibb.co/7QgN4N8/Screenshot-2023-12-23-084333.png)
+
+![Lyrics](https://i.ibb.co/wpHYNB1/Screenshot-2023-12-23-084414.png)
