--- a/pages/commands.mdx
+++ b/pages/commands.mdx
@@ -1,15 +1,15 @@
 # Commands
 
-- **/filter** - Toggle filter. Ex. **/filter bassboost**. <span style={{ color: '#F04747' }}>(new)</span> 
-- **/filter-reset** - Reset filter. <span style={{ color: '#F04747' }}>(new)</span> 
+## General
 - **/help** - Display available commands and bot info.
 - **/join** - Join the voice channel.
 - **/leave** - Leave the voice channel.
-- **/lyrics** - Get the lyrics of a song. <span style={{ color: '#F04747' }}>(new)</span> 
+- **/ping** - View latency.
+
+## Music
 - **/move** - Move a song from the queue.
 - **/nowplaying** - Display the currently playing song.
 - **/pause** - Pause the currently playing song.
-- **/ping** - View latency.
 - **/play** - Play a song/album/playlist from YouTube, Spotify, Deezer, or Apple Music.
 - **/previous** - Return to the previous song in the queue.
 - **/queue** - Show the current queue. Paginate. Leave blank for page 1.
@@ -24,5 +24,13 @@
 - **/volume** - Adjust the volume of music playback.
 - **/voteskip** - Toggle the voting system for skipping songs.
 - **/votestop** - Toggle the voting system for stopping music playback.
+
+## Filters
+- **/filter** - Toggle filter. Ex. **/filter-bassboost**.
+- **/filter-reset** - Reset filter.
+
+## Advanced
+- **/autoplay** - Toggle autoplay. Automatically adds and play similar songs to the queue. <span style={{ color: '#F04747' }}>(new)</span> 
+- **/lyrics** - Get the lyrics of a song. 
 
 *Note*: The **/voteskip** and **/votestop** features are enabled by default, allowing users to collectively decide whether to skip or stop the current song through a voting system. To disable these features, simply use **/voteskip** or **/votestop**.
