--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,19 +10,21 @@
 - **24/7 Uptime**
 - **Simple Controls**
 - **Voting System (/skip, /skipto, and /stop)**
+- **Autoplay**
 
 ## Supported Sources
 - **YouTube**
 - **Spotify**
 - **Deezer**
 - **SoundCloud**
-- **Apple Music**
 
 ## Screenshots
-![Play](https://i.ibb.co/SvzGVCr/Screenshot-2023-12-14-083010.png)
+![Play](https://i.ibb.co/f83SnTN/Screenshot-2024-01-07-045801.png)
 
 ![Skip](https://i.ibb.co/s21Lxz0/Screenshot-2023-12-14-083151.png)
 
-![Filter](https://i.ibb.co/7QgN4N8/Screenshot-2023-12-23-084333.png)
+![Autoplay](https://i.ibb.co/Sns0Tb4/Screenshot-2024-01-07-045831.png)
+
+![Filter](https://i.ibb.co/C7YT9Rk/Screenshot-2024-01-07-045815.png)
 
 ![Lyrics](https://i.ibb.co/wpHYNB1/Screenshot-2023-12-23-084414.png)
