--- a/pages/commands.mdx
+++ b/pages/commands.mdx
@@ -4,7 +4,8 @@
 - **/help** - Display available commands and bot info.
 - **/join** - Join the voice channel.
 - **/leave** - Leave the voice channel.
-- **/ping** - View latency.
+- **/ping** - View bot latency.
+- **/stats** - View bot stats.
 
 ## Music
 - **/move** - Move a song from the queue.
@@ -31,6 +32,6 @@
 
 ## Advanced
 - **/autoplay** - Toggle autoplay. Automatically adds and play similar songs to the queue. <span style={{ color: '#F04747' }}>(new)</span> 
-- **/lyrics** - Get the lyrics of a song. 
+- **/lyrics** - Get the lyrics of the current song. 
 
 *Note*: The **/voteskip** and **/votestop** features are enabled by default, allowing users to collectively decide whether to skip or stop the current song through a voting system. To disable these features, simply use **/voteskip** or **/votestop**.
