--- a/pages/commands.mdx
+++ b/pages/commands.mdx
@@ -26,12 +26,33 @@
 - **/voteskip** - Toggle the voting system for skipping songs.
 - **/votestop** - Toggle the voting system for stopping music playback.
 
+*Note*: The **/voteskip** and **/votestop** features are enabled by default, allowing users to collectively decide whether to skip or stop the current song through a voting system. To disable these features, simply use **/voteskip** or **/votestop**.
+
 ## Filters
-- **/filter** - Toggle filter. Ex. **/filter-bassboost**.
-- **/filter-reset** - Reset filter.
+- **/filter-bassboost**
+- **/filter-karaoke**
+- **/filter-lowpass**
+- **/filter-nightcore**
+- **/filter-rotation**
+- **/filter-tremolo**
+- **/filter-vaporwave**
+- **/filter-vibrato**
+- **/filter-reset** - Reset the filters.
+
+## Playlist <span style={{ color: '#F04747' }}>(new)</span> 
+- **/playlist-add** - Add a song to a playlist.
+- **/playlist-clear** - Clear all songs from a playlist.
+- **/playlist-create** - Create a playlist.
+- **/playlist-delete** - Delete a playlist.
+- **/playlist-list** - List all playlists.
+- **/playlist-load** - Load a playlist and add its songs to the queue.
+- **/playlist-move** - Move a song within a playlist.
+- **/playlist-remove** - Remove a song from a playlist.
+- **/playlist-rename** - Rename a playlist.
+- **/playlist-view** - View the songs in a playlist.
+
+*Note*: Limits to 3 playlists per user, 30 songs per playlist.
 
 ## Advanced
-- **/autoplay** - Toggle autoplay. Automatically adds and play similar songs to the queue. <span style={{ color: '#F04747' }}>(new)</span> 
-- **/lyrics** - Get the lyrics of the current song. 
-
-*Note*: The **/voteskip** and **/votestop** features are enabled by default, allowing users to collectively decide whether to skip or stop the current song through a voting system. To disable these features, simply use **/voteskip** or **/votestop**.
+- **/autoplay** - Toggle autoplay. Automatically adds and play similar songs to the queue.
+- **/lyrics** - Get the lyrics of the currently playing song. 
