--- a/pages/privacy-policy.mdx
+++ b/pages/privacy-policy.mdx
@@ -1,7 +1,7 @@
 # Privacy Policy
 
 ## Information Collection
-**Musync!** does not collect or store any personal or non-personal information about users. This commitment to privacy extends to not having a database. The bot operates in real-time without the need to store any data.
+**Musync!** does not collect or store any personal or non-personal information about users unless explicitly provided for optional features. For example, if you choose to create playlists, **Musync!** may collect and store user IDs associated with those playlists in a secure database. This commitment to privacy extends to not storing unnecessary data for general operations. The bot operates in real-time without the need to store unnecessary data beyond what is essential for specific functionalities.
 
 ## Changes to This Privacy Policy
 **Musync!** has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our bot. We encourage users to frequently check this page for any changes to stay informed. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.
