--- a/pages/terms-of-service.mdx
+++ b/pages/terms-of-service.mdx
@@ -11,6 +11,9 @@ You agree not to use **Musync!** for any unlawful purposes or to conduct any unl
 ## User Content
 You are solely responsible for the content you make available through **Musync!**. This includes responsibility for any music or other content requested or played by the bot.
 
+## Database Usage
+**Musync!** may collect and store user IDs associated with playlists in a secure database for specific functionalities. This information is collected only if users choose to create playlists. The bot operates in real-time without the need to store unnecessary data for general operations.
+
 ## Service Availability
 While we strive to keep **Musync!** online as much as possible, there may be periods of downtime for maintenance or due to unforeseen issues. We are not liable for any disruption to services.
 
@@ -20,5 +23,8 @@ In no event shall we be liable for any direct, indirect, incidental, special, co
 ## Violation of Terms
 If you violate any of these Terms, your permission to use **Musync!** may be suspended or permanently revoked.
 
+## Privacy Policy Agreement
+By using **Musync!**, you acknowledge and agree to the terms outlined in our [Privacy Policy](#link-to-privacy-policy).
+
 ## Contact Information
-If you have any questions about these Terms, please contact us at sinnedpenguin@proton.me.
+If you have any questions about these Terms or our Privacy Policy, please contact us at sinnedpenguin@proton.me.
