--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,23 +8,28 @@
 - **100% Free**
 - **High-Quality Music**
 - **24/7 Uptime**
-- **Simple Controls**
 - **Voting System (/skip, /skipto, and /stop)**
 - **Autoplay**
+- **Player Buttons**
+- **User Playlists**
 
 ## Supported Sources
 - **YouTube**
 - **Spotify**
 - **Deezer**
 - **SoundCloud**
+- **Apple Music** <span style={{ color: '#F04747' }}>(new)</span> 
+- **Twitch** <span style={{ color: '#F04747' }}>(new)</span> 
+- **Bandcamp** <span style={{ color: '#F04747' }}>(new)</span> 
+- **Vimeo** <span style={{ color: '#F04747' }}>(new)</span> 
 
 ## Screenshots
-![Play](https://i.ibb.co/f83SnTN/Screenshot-2024-01-07-045801.png)
+![Play](https://i.ibb.co/JcgfYBs/Screenshot-2024-01-17-181010.png)
 
-![Skip](https://i.ibb.co/s21Lxz0/Screenshot-2023-12-14-083151.png)
+![Skip](https://i.ibb.co/P9Hz0ZG/Screenshot-2024-01-17-181048.png)
 
-![Autoplay](https://i.ibb.co/Sns0Tb4/Screenshot-2024-01-07-045831.png)
+![Autoplay](https://i.ibb.co/Wtkn00m/Screenshot-2024-01-17-181845.png)
 
-![Filter](https://i.ibb.co/C7YT9Rk/Screenshot-2024-01-07-045815.png)
+![Filter](https://i.ibb.co/Ryr3GQN/Screenshot-2024-01-17-181159.png)
 
-![Lyrics](https://i.ibb.co/wpHYNB1/Screenshot-2023-12-23-084414.png)
+![Lyrics](https://i.ibb.co/6mcs47L/Screenshot-2024-01-17-181145.png)
