--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,7 @@
 - **Voting System (/skip, /skipto, and /stop)**
 - **Autoplay**
 - **Player Buttons**
-- **User Playlists**
+- **Custom Playlists**
 
 ## Supported Sources
 - **YouTube**
@@ -24,7 +24,7 @@
 - **Vimeo** <span style={{ color: '#F04747' }}>(new)</span> 
 
 ## Screenshots
-![Play](https://i.ibb.co/JcgfYBs/Screenshot-2024-01-17-181010.png)
+![Play](https://i.ibb.co/5xghHQh/Screenshot-2024-01-24-144422.png)
 
 ![Skip](https://i.ibb.co/P9Hz0ZG/Screenshot-2024-01-17-181048.png)
 
