--- a/pages/release-notes.mdx
+++ b/pages/release-notes.mdx
@@ -1,5 +1,10 @@
 # Release Notes 
 
+## 1.5.0
+January 24, 2024 (UTC +08:00)
+- [+] Added more buttons: Playlist add, Filter, Lyrics, and Autoplay.
+- [+] Added another lyric source, if the first one fails, another will be used.
+
 ## 1.4.0
 January 17, 2024 (UTC +08:00)
 - [+] Playlists. Limits to 3 playlists per user, 30 songs per playlist.
