--- a/pages/terms-of-service.mdx
+++ b/pages/terms-of-service.mdx
@@ -27,4 +27,4 @@ If you violate any of these Terms, your permission to use **Musync!** may be sus
 By using **Musync!**, you acknowledge and agree to the terms outlined in our [Privacy Policy](#link-to-privacy-policy).
 
 ## Contact Information
-If you have any questions about these Terms or our Privacy Policy, please contact us at sinnedpenguin@proton.me.
+If you have any questions about these Terms or our Privacy Policy, please contact us through our [Discord Server](https://discord.gg/yQxpgFdC6n).
