--- a/pages/privacy-policy.mdx
+++ b/pages/privacy-policy.mdx
@@ -10,4 +10,4 @@
 By using **Musync!**, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our bot. Your continued use of the bot following the posting of changes to this policy will be deemed your acceptance of those changes.
 
 ## Contacting Us
-If you have any questions about this Privacy Policy, the practices of this bot, or your dealings with this bot, please contact us at sinnedpenguin@proton.me.
+If you have any questions about these Terms or our Privacy Policy, please contact us through our [Discord Server](https://discord.gg/yQxpgFdC6n).
