--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,7 +11,8 @@
 - **100% Free**
 - **High-Quality Music**
 - **24/7 Uptime**
-- **Voting System (/skip, /skipto, and /stop)**
+- **Voting System (/skip, /skipto, /stop, /clear)**
+- **DJ System** <span style={{ color: '#F04747' }}>(new)</span> 
 - **Autoplay**
 - **Player Buttons**
 - **Custom Playlists**
@@ -21,15 +22,17 @@
 - **Spotify**
 - **Deezer**
 - **SoundCloud**
-- **Apple Music** <span style={{ color: '#F04747' }}>(new)</span> 
-- **Twitch** <span style={{ color: '#F04747' }}>(new)</span> 
-- **Bandcamp** <span style={{ color: '#F04747' }}>(new)</span> 
-- **Vimeo** <span style={{ color: '#F04747' }}>(new)</span> 
+- **Apple Music**
+- **Twitch**
+- **Bandcamp**
+- **Vimeo**
 
 ## Screenshots
 ![Play](https://i.ibb.co/5xghHQh/Screenshot-2024-01-24-144422.png)
 
 ![Skip](https://i.ibb.co/P9Hz0ZG/Screenshot-2024-01-17-181048.png)
+
+![DJ](https://i.ibb.co/BZ2y244/Screenshot-2024-01-30-151633.png)
 
 ![Autoplay](https://i.ibb.co/Wtkn00m/Screenshot-2024-01-17-181845.png)
 
