Update privacy policy and ToS

--- a/pages/terms-of-service.mdx
+++ b/pages/terms-of-service.mdx
@@ -12,7 +12,7 @@ You agree not to use **Musync!** for any unlawful purposes or to conduct any unl
 You are solely responsible for the content you make available through **Musync!**. This includes responsibility for any music or other content requested or played by the bot.
 
 ## Database Usage
-**Musync!** may collect and store user IDs associated with playlists in a secure database for specific functionalities. This information is collected only if users choose to create playlists. The bot operates in real-time without the need to store unnecessary data for general operations.
+**Musync!** may collect and store user or server IDs associated with playlists and server settings in a secure database for specific functionalities. This information is collected only if users choose to create playlists or enable settings such as voteclear, votestop, voteskip, dj-mode, dj, and dj-commands. The bot operates in real-time without the need to store unnecessary data for general operations.
 
 ## Service Availability
 While we strive to keep **Musync!** online as much as possible, there may be periods of downtime for maintenance or due to unforeseen issues. We are not liable for any disruption to services.
