--- a/pages/privacy-policy.mdx
+++ b/pages/privacy-policy.mdx
@@ -1,7 +1,7 @@
 # Privacy Policy
 
 ## Information Collection
-**Musync!** only collects and stores user-related information in the database when you actively create playlists or enable specific settings such as voteclear, votestop, voteskip, dj-mode, dj, dj-commands. This data is securely stored and limited to what's necessary for the functionalities you choose to use. We prioritize user privacy and avoid unnecessary data collection for general operations.
+**Musync!** only collects and stores user or server-related information in the database when you actively create playlists or enable specific settings such as voteclear, votestop, voteskip, dj-mode, dj, dj-commands. This data is securely stored and limited to what's necessary for the functionalities you choose to use. We prioritize user privacy and avoid unnecessary data collection for general operations.
 
 ## Changes to This Privacy Policy
 **Musync!** has the discretion to update this privacy policy at any time. When we do, we will post a notification on the main page of our bot. We encourage users to frequently check this page for any changes to stay informed. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.
